2006-12-07 Chris Kelly <ckdake@ckdake.com> 1.5.5-pl2-svn-b1

 * Fix: svn keywords were missing on some files which broke
 	up to date checking in the config wizard

2006-11-12 Chris Kelly <ckdake@ckdake.com> 1.5.5-pl1

 * Fix: Small typo broke slideshow in Opera and IE
 * Release: 1.5.5-pl1

2006-11-12 Chris Kelly <ckdake@ckdake.com> 1.5.5

* Release: 1.5.5

2006-11-12 Jens Tkotz <jens@peino.de> 1.5.5-svn-b21

 * Fix: Little CSS issue in config wizard.

 * Fix: More Typos.

2006-11-12 Jens Tkotz <jens@peino.de> 1.5.5-svn-b20

 * Fix: Vertical Flip was broken in rotate/flip dialog.

 * Fix: Typos.

   Thanks to C.M. aka H.P.

2006-11-12 Jens Tkotz <jens@peino.de> 1.5.5-svn-b19

 * Fix: Embedded slideshow in low mode.

 * Change: Added class "g-photo" around every thumb and photo.
	   So its easier controllable via CSS.

 * Change: Make textarea in edit_field a little bigger.

2006-10-12 Jens Tkotz <jens@peino.de> 1.5.5-svn-b18

 * Reverted b17 Change

 * Change: removed unneeded $gallery->align from lib/lang.php

 * Use of gTranslate at some places.

2006-10-12 Jens Tkotz <jens@peino.de> 1.5.5-svn-b16

* Fix: #1487824, allow negative alignment for watermark.

2006-10-12 Jens Tkotz <jens@peino.de> 1.5.5-svn-b15

 * Fix: #1299913 ; $_REQUEST['name'] is now NOT longer an indicator for
                   being embedded.

2006-10-10 Jens Tkotz <jens@peino.de> 1.5.5-svn-b14

 * Change: Better failure handling for eCards.

 * Fix: eCard preview did not work embedded.

2006-09-28 Jens Tkotz <jens@peino.de> 1.5.5-svn-b13

 * Fix: The preference for normal/full when browsing an album was broken since Gallery 1.5.2
   Thanks to mg66 from forums.

2006-09-16 Jens Tkotz <jens@peino.de> 1.5.5-svn-b12

 * Fix/Change: lib/lang.php
    - initlanguage() was called to late in init.php.
      This results in a Call to undefined function: _() 

    - Added second param $userlanguage to initlanguage()
      If this is set a reinit is forced.
